[project]
name = "bale-otp"
version = "0.1.0"
authors = [
    { name = "Ali Safamanesh", email = "darg.q.a.a@gmail.com" },
    { name = "Aydin Rahbaran", email = "codewizaard9@gmail.com"}
]
description = "A python wrapper for bale otp service api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ["aiohttp", "beautifulsoup4"]
[project.urls]
github = "https://github.com/daradege/bale-otp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["baleotp"]